# DnsLibs

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  .markdownlint-cli2.yaml  .markdownlint.json  .markdownlintignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_STYLE.md  DEVELOPMENT.md  LICENSE.md  Makefile  Package.swift  README.md  conandata.yml  conanfile.py  conanfile.txt  increment_conan_version.sh  requirements.txt
common/: CMakeLists.txt  deferred_arg.cpp  event_loop.cpp  sys.cpp  url_utils.cpp
common/include/: EventLoop.h  ag_cache.h  ag_cesu8.h  ag_clock.h  ag_deferred_arg.h  ag_defs.h  ag_dns_utils.h  ag_event_loop.h  ag_file.h  ag_logger.h  ag_net_consts.h  ag_net_utils.h  ag_regex.h  ag_route_resolver.h  ag_socket_address.h  ag_sys.h  ag_utils.h  ag_version.h  base64.h
common/src/: EventLoop.cpp  base64.cpp  cesu8.cpp  clock.cpp  deferred_arg.cpp  event_loop.cpp  file.cpp  logger.cpp  net_utils.cpp  route_resolver.cpp  socket_address.cpp  sys.cpp  utils.cpp
common/test/: cache_test.cpp  test_event_loop.cpp  test_url_utils.cpp  utils_test.cpp
common/test_helpers/: dns_test_helpers.h  integration_test_guard.h  loopback_dns_server.h  loopback_dnscrypt_server.h  loopback_doh_server.h  loopback_http_connect_proxy.h  loopback_quic_server.h  loopback_tls_server.h  mock_upstream.h  test_certificates.h
dnscrypt/: CMakeLists.txt  dns_crypt_cipher.cpp  dns_crypt_client.cpp  dns_crypt_ldns.cpp  dns_crypt_padding.cpp  dns_crypt_padding.h  dns_crypt_server_info.cpp  dns_crypt_utils.cpp
dnscrypt/include/: dns_crypt_cipher.h  dns_crypt_client.h  dns_crypt_consts.h  dns_crypt_ldns.h  dns_crypt_server_info.h  dns_crypt_utils.h
dnscrypt/src/: dns_crypt_cipher.cpp  dns_crypt_cipher.h  dns_crypt_client.cpp  dns_crypt_ldns.cpp  dns_crypt_ldns.h  dns_crypt_padding.cpp  dns_crypt_padding.h  dns_crypt_server_info.cpp  dns_crypt_utils.cpp
dnscrypt/test/: dns_crypt_test.cpp  loopback_dnscrypt_server_test.cpp
dnsfilter/: CMakeLists.txt  denyallow.cpp  dnsrewrite.cpp  engine.cpp  filter.cpp  filter.h  filtering_log_action.cpp  rule_utils.cpp  rule_utils.h
dnsfilter/include/: dnsfilter.h
dnsfilter/src/: dnsrewrite.cpp  engine.cpp  filter.cpp  filter.h  rule_utils.cpp  rule_utils.h
dnsfilter/test/: benchmark.cpp  dnsfilter_benchmark_runner.py  dnsfilter_test.cpp  dnsrewrite_test.cpp  filtering_log_action_test.cpp
dnsstamp/: CMakeLists.txt  dns_stamp.cpp
dnsstamp/include/: base64.h  dns_stamp.h
dnsstamp/src/: base64.cpp  dns_stamp.cpp
dnsstamp/test/: dns_stamp_test.cpp
net/: CMakeLists.txt  aio_socket.cpp  application_verifier.cpp  blocking_socket.cpp  certificate_verifier.cpp  default_verifier.cpp  outbound_direct_proxy.cpp  outbound_direct_proxy.h  outbound_http_proxy.cpp  outbound_http_proxy.h  outbound_proxy.cpp  outbound_proxy.h  outbound_socks_proxy.cpp  outbound_socks_proxy.h  proxied_socket.cpp  proxied_socket.h  secured_socket.cpp  secured_socket.h  socket.cpp  socket_factory.cpp  tcp_dns_buffer.cpp  tcp_stream.cpp  tcp_stream.h  tls_codec.cpp  tls_codec.h  tls_session_cache.cpp  udp_socket.cpp  udp_socket.h  utils.cpp
net/include/: ag_blocking_socket.h  ag_outbound_proxy_settings.h  ag_socket.h  ag_tcp_dns_buffer.h  application_verifier.h  certificate_verifier.h  default_verifier.h  tls_session_cache.h
net/src/: application_verifier.cpp  blocking_socket.cpp  certificate_verifier.cpp  default_verifier.cpp  outbound_direct_proxy.cpp  outbound_direct_proxy.h  outbound_http_proxy.cpp  outbound_http_proxy.h  outbound_proxy.cpp  outbound_proxy.h  outbound_socks_proxy.cpp  outbound_socks_proxy.h  proxied_socket.cpp  proxied_socket.h  secured_socket.cpp  secured_socket.h  socket.cpp  socket_factory.cpp  tcp_dns_buffer.cpp  tcp_stream.cpp  tcp_stream.h  tls_codec.cpp  tls_codec.h  tls_session_cache.cpp  udp_socket.cpp  udp_socket.h
net/test/: test_tcp_stream.cpp
proxy/: CMakeLists.txt  dns64.cpp  dns64.h  dns_forwarder.cpp  dns_forwarder.h  dns_forwarder_utils.cpp  dns_forwarder_utils.h  dns_truncate.cpp  dns_truncate.h  dnsproxy.cpp  dnsproxy_listener.cpp  dnsproxy_listener.h  dnssec_ok.h  ech.h  proxy_bootstrapper.h  response_cache.h  response_helpers.h  retransmission_detector.cpp  retransmission_detector.h  svcb.h  tcp_dns_payload_parser.h  tun_listener.cpp
proxy/include/: dns64.h  dnsproxy.h  dnsproxy_events.h  dnsproxy_settings.h
proxy/src/: dns64.cpp  dns64.h  dns_forwarder.cpp  dns_forwarder.h  dns_truncate.cpp  dns_truncate.h  dnsproxy.cpp  dnsproxy_listener.cpp  dnsproxy_listener.h  retransmission_detector.cpp  retransmission_detector.h
proxy/test/: bad_test_filter.txt  big_dns_packet.inc  blocking_modes_test_filter.txt  cache_benchmark.cpp  crash_regress_test_filter.txt  dns64_test.cpp  dnsproxy_test.cpp  listener_standalone.cpp  listener_test.cpp  truncate_test.cpp  tun_listener_standalone.cpp  tun_listener_test.cpp  whitelist_test_filter.txt
tcpip/: CMakeLists.txt
tcpip/src/: icmp_request.cpp  icmp_request.h  icmp_request_manager.cpp  icmp_request_manager.h  ip_hooks.cpp  ip_hooks.h  libuv_lwip.cpp  libuv_lwip.h  lwipopts.h  packet_pool.cpp  packet_pool.h  tcp_conn_manager.cpp  tcp_conn_manager.h  tcp_connection.h  tcp_raw.cpp  tcp_raw.h  tcpip_api.cpp  tcpip_common.cpp  tcpip_common.h  tcpip_connection.h  tcpip_util.cpp  tcpip_util.h  udp_conn_manager.cpp  udp_conn_manager.h  udp_connection.h  udp_raw.cpp  udp_raw.h
tcpip/test/: test_packet_pool.cpp  test_tun_echo.cpp  test_util.cpp
tls/: CMakeLists.txt
tls/include/: certificate_verifier.h  (+1 more)
upstream/: CMakeLists.txt  android_res_api.cpp  bootstrapper.cpp  bootstrapper.h  connection.h  dns_framed.cpp  dns_framed.h  resolver.cpp  resolver.h  system_resolver.cpp  system_resolver.h  system_resolver_android.cpp  system_resolver_apple.cpp  upstream.cpp  upstream_dnscrypt.cpp  upstream_dnscrypt.h  upstream_doh.cpp  upstream_doh.h  upstream_doq.cpp  upstream_doq.h  upstream_dot.cpp  upstream_dot.h  upstream_plain.cpp  upstream_plain.h  upstream_system.cpp  upstream_system.h  upstream_system_android.cpp  upstream_system_apple.cpp  upstream_utils.cpp
(+513 files in other folders)
